--- a/OoTd.css
+++ b/OoTd.css
@@ -8,7 +8,7 @@ body{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
+    width: 80%;
   }
   #qs{
     color: White;
@@ -21,8 +21,8 @@ body{
   .ans{
     color: GhostWhite;
     font-size: 100%;
-    width: 50%;
-    left: 20%;
+    width: 80%;
+    left: 10%;
     border-style: outset;
     border-width: 3px;
     padding:10px;
@@ -34,69 +34,108 @@ body{
     border-style: inset;
     font-size: 90%;
   }
+  #home{
+    position: absolute;
+    top: 12%;
+  }
+  .btn{
+    position: relative;
+    top: 40px;
+    left: 10%;
+    color: GhostWhite;
+    text-align: center;
+    font-size: 100%;
+    background-color: DimGray;
+    width: 80%;
+    height: 200%;
+    line-height: 200%;
+    border-style: outset;
+    border-width: 5px;
+    text-decoration: none;
+  }
+  .btn:hover{
+    border-style: inset;
+    color: black;
+    text-decoration: none;
+  }
+  .pic{
+    width: 50%;
+    height: auto;
+    left: 10%;
+    border-width: 5px;
+  }
+  #end{
+    top: 12%;
+    color: GhostWhite;
+    font-family: "Times New Roman", Times, serif;
+  }
 }
 
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 30%;
-}
-#home{
-  position: absolute;
-  top: 12%;
-}
-.btn{
-  position: relative;
-  top: 40px;
-  left: 33%;
-  color: GhostWhite;
-  text-align: center;
-  font-size: 150%;
-  background-color: DimGray;
-  width: 34%;
-  height: 200%;
-  line-height: 200%;
-  border-style: outset;
-  border-width: 5px;
-}
-.btn:hover{
-  border-style: inset;
-  color: black;
-}
+@media only screen and (min-width: 601px){
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+  }
+  #home{
+    position: absolute;
+    top: 12%;
+  }
+  .btn{
+    position: relative;
+    top: 40px;
+    left: 33%;
+    color: GhostWhite;
+    text-align: center;
+    font-size: 150%;
+    background-color: DimGray;
+    width: 34%;
+    height: 200%;
+    line-height: 200%;
+    border-style: outset;
+    border-width: 5px;
+    text-decoration: none;
+  }
+  .btn:hover{
+    border-style: inset;
+    color: black;
+    text-decoration: none;
+  }
 
-#qs{
-  color: White;
-  font-size: 200%;
-  left: 10%;
-  padding: 20px;
-  margin: 20px;
-  font-family: "Times New Roman", Times, serif;
-}
-.ans{
-  color: GhostWhite;
-  font-size: 150%;
-  width: 50%;
-  left: 20%;
-  border-style: outset;
-  border-width: 3px;
-  padding:20px;
-  margin: 20px;
-  font-family: "Times New Roman", Times, serif;
-}
-.ans:hover{
-  background-color: DimGrey;
-  border-style: inset;
-  font-size: 140%;
-}
-.pic{
-  width: 20%;
-  height: auto;
-  left: 50%;
-  border-width: 5px;
-}
-#end{
-  top: 12%;
-  color: GhostWhite;
-  font-family: "Times New Roman", Times, serif;
+  #qs{
+    color: White;
+    font-size: 200%;
+    left: 10%;
+    padding: 20px;
+    margin: 20px;
+    font-family: "Times New Roman", Times, serif;
+  }
+  .ans{
+    color: GhostWhite;
+    font-size: 150%;
+    width: 50%;
+    left: 20%;
+    border-style: outset;
+    border-width: 3px;
+    padding:20px;
+    margin: 20px;
+    font-family: "Times New Roman", Times, serif;
+  }
+  .ans:hover{
+    background-color: DimGrey;
+    border-style: inset;
+    font-size: 140%;
+  }
+  .pic{
+    width: 20%;
+    height: auto;
+    left: 50%;
+    border-width: 5px;
+  }
+  #end{
+    top: 12%;
+    color: GhostWhite;
+    font-family: "Times New Roman", Times, serif;
+  }
 }
